--- a/CSS/summary.css
+++ b/CSS/summary.css
@@ -1,14 +1,123 @@
-/* SUB NAV */
+/* SUB NAVIGATION */
 
-#small-bubble, #medium-bubble, #large-bubble {
-    transform: scale(1);
-    animation: none;
+#subnav, #sub-subnav {
+    display: grid;
+    grid-gap: 10vw;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
+    align-items: center;
+    padding-right: 50px;
+    padding-bottom: 4px;
+    background: var(--mainWhite);
+    margin-top: -10px;
 }
 
-/* SUB SUB NAV */
+#subnav div, #sub-subnav div {
+    display: grid;
+    width: 50px;
+    align-items: center;
+    justify-items: center;
+}
+
+#small-bubble, #medium-bubble, #large-bubble, #sub-medium-bubble {
+    border-radius: 50%;
+    background: var(--lightBlue);
+    align-self: center;
+    justify-self: center;
+}
+
+#small-bubble {
+    margin-top: 0px;
+    width: 8px;
+    height: 8px;
+    max-width: 8px;
+    max-height: 8px;
+}
+
+#medium-bubble {
+    margin-top: 4px;
+    width: 16px;
+    height: 16px;
+    max-width: 16px;
+    max-height: 16px;
+}
+
+#large-bubble {
+    margin-top: 4px;
+    width: 32px;
+    height: 32px;
+    max-width: 32px;
+    max-height: 32px;
+}
+
+a #large-bubble p {
+    color: var(--mainWhite);
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 14px;
+}
+
+/* SUB SUB NAVIGATION */
+
+#sub-subnav {
+    padding-bottom: 10px;
+    margin-top: 0px;
+}
+
+#sub-subnav #sub-medium-bubble {
+    margin: 0 0 4px 0;
+    width: 16px;
+    height: 16px;
+    max-width: 16px;
+    max-height: 16px;
+    transform: scale(0.01);
+    animation: bubblepop .5s ease-out forwards;
+}
 
 #sub-subnav p {
-    margin-left: -16px;
+    border-radius: 20px;
+    padding: 4px 10px;
+    margin-left: -20px;
+    font-size: 14px;
+    color: var(--mainWhite);
+    background: var(--lightBlue);
+    transform: scale(0.01);
+    animation: bubblepop .5s ease-out forwards;
+    animation-delay: .2s;
+}
+
+header #subnav a:hover p {
+    color: var(--mainBlue);
+}
+
+/* DOWNLOAD PDF */
+
+#pdf-container {
+    position: absolute;
+    top: 50px;
+    right: 54px;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+}
+
+#pdf-container a p {
+    color: var(--mainOrange);
+    font-size: 16px;
+}
+
+#pdf-container a:hover p {
+    color: var(--darkOrange);
+}
+
+#cv {
+    width: 48px;
+    height: 59px;
+}
+
+#cv:hover {
+    color: var(--darkOrange);
 }
 
 /* MAIN */
@@ -33,7 +142,7 @@ main {
 
 #summary p {
     margin: 4vw 10vw;
-    font-size: 3vw; /*21px*/
+    font-size: 3vw;
 }
 
 #summary p:nth-of-type(1) {
@@ -133,8 +242,12 @@ main {
 .c-suki p {margin-left: 2vw; background: var(--lightGray);}
 .c-me p {margin-right: 2vw; background: var(--lightBlue);}
 
-@media all and (max-width: 650px) {
-    #sub-subnav p {margin-left: -11px;}
+@keyframes bubblepop {
+    0% {transform: scale(0.01);}
+    100% {transform: scale(1);}
+}
+
+/*@media all and (max-width: 650px) {
     #summary h1,#journey h1,#FAQs h1 {height: 30px; font-size: 21px;}
 }
 
@@ -144,4 +257,10 @@ main {
 
 @media all and (max-width: 540px) {
     #journey p , .chat-container p {font-size: 14px;}
+}*/
+
+
+@media all and (max-width: 420px) {
+    #subnav, #sub-subnav {padding-right: 20px; grid-gap: 4vw;}
+    #pdf-container {right: calc(4vw + 10px)}
 }
